Created README.md and its images, build and run scripts and minor corrections:
 * Now a message os shown when columns couldn't be located in CSVs
   instead of crashing
 * Command mode now uses pullUpFile instead of taking the routes
   directly from the args
 * Improved format and corrected typos